feat: ide overhaul